@@ -1,6 +1,7 @@
 Release 0.1-2 (//):
   * Fix vignette title.
   * Add console notification when using tcltk (Rich FitzJohn)
+  * Add tests for terminal reader.
 
 Release 0.1-1 (4/25/2016):
   * Add package vignette.
